
syntax = "proto3";

package wego_server.v1;

option go_package = "github.com/weaveworks/weave-gitops/pkg/protos/applications";

import "google/api/annotations.proto";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
    info: {
      title: "WeGo Applications API",
      version: "0.1";
      description: "The WeGo Applications API handles operations for Weave GitOps Applications";
    };
    consumes: "application/json";
    produces: "application/json";
};

service Applications {
    /**
     * ListApplications returns the list of WeGo applications that the authenticated user has access to.
    */
    rpc ListApplications(ListApplicationsRequest) returns (ListApplicationsResponse) {
        option (google.api.http) = {
            get : "/v1/applications"
        };
    }
}

message Application {
    string name = 1; // The name of the application
}

message ListApplicationsRequest {

}

message ListApplicationsResponse {
   repeated Application applications = 1; // A list of applications
}
